clean up assets and move to assets folder

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -15,14 +15,14 @@
   </head>
   <body>
   <audio id="myTune">
-  <source src="igotthekeys.mp3">
-  <source src="igotthekeys.ogg">
+  <source src="assets/igotthekeys.mp3">
+  <source src="assets/igotthekeys.ogg">
 </audio>
 <button onclick="document.getElementById('myTune').play()">Play Music</button>
 <button onclick="document.getElementById('myTune').pause()">Pause Music</button>
 <button onclick="document.getElementById('myTune').pause(); document.getElementById('myTune').currentTime = 0;">Stop Music</button>
-<audio class="collision-sound" autoplay src="letmeinspireyou.mp3"></audio>
-<audio class="addDancerButton" src="letmeinspireyou.mp3"></audio>
+<audio class="collision-sound" autoplay src="assets/letmeinspireyou.mp3"></audio>
+<audio class="addDancerButton" src="assets/letmeinspireyou.mp3"></audio>
 <audio class="collision-sound" autoplay src="letmeinspireyou.mp3"></audio>
     <div class="topbar">
       <span class="title">BlinkediN</span>
