--- a/dancefloor.html
+++ b/dancefloor.html
@@ -11,7 +11,7 @@
     <script src="src/alan.js"></script>
     <script src="src/marc.js"></script>
     <script src="src/mo.js"></script>
-    <script src="src/khaled.js"></script>
+    <script src="src/kevin.js"></script>
   </head>
   <body>
   <audio id="myTune">
@@ -21,19 +21,19 @@
 <button onclick="document.getElementById('myTune').play()">Play Music</button>
 <button onclick="document.getElementById('myTune').pause()">Pause Music</button>
 <button onclick="document.getElementById('myTune').pause(); document.getElementById('myTune').currentTime = 0;">Stop Music</button>
-<audio class="collision-sound" autoplay src="assets/letmeinspireyou.mp3"></audio>
-<audio class="addDancerButton" src="assets/letmeinspireyou.mp3"></audio>
-<audio class="collision-sound" autoplay src="letmeinspireyou.mp3"></audio>
+<audio class="collision-sound" autoplay src="assets/yousmart.mp3"></audio>
+<audio class="anotherone" autoplay src="assets/anotherone.mp3"></audio>
     <div class="topbar">
       <span class="title">BlinkediN</span>
       <a href="#" class="methodButton lineUpButton">makes our blinkies line up</a>
-      <a href="#" class="methodButton topUpButton">makes our blinkies line up TOP</a>
-      <a href="#" class="methodButton breakLineButton">BREAK OUT</a>
+      <a href="#" class="methodButton topUpButton">new dance</a>
+      <a href="#" class="methodButton breakLineButton">break</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="albreyDancer">makes a brey</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="jamilDancer">makes a jamil</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="alanDancer">makes an alan</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="marcDancer">makes a marc</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="moDancer">makes a mo</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="kevinDancer">makes a kevin</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    </div>
     <script src="src/init.js"></script>
   </body>
